Support for Cloud Themes Updated gradle build

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,59 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ABTheme Showcase</string>
-    <string name="lastUpdate_standard">Ultimo aggiornamento: 2019/05/13 per Telegram v5.3</string>
+    <string name="lastUpdate_standard">Tema Cloud. Disponibile anche su Desktop</string>
     <string name="lastUpdate_au">Ultimo aggiornamento: 2019/05/13 per Telegram v4.9</string>
-    <string name="lastUpdate_cyanogen">Ultimo aggiornamento: 2019/05/13 per Telegram v4.9</string>
+    <string name="lastUpdate_cyanogen">Tema Cloud</string>
     <string name="lastUpdate_mint">Ultimo aggiornamento: 3/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_orange">Ultimo aggiornamento: 9/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_oxygen">Ultimo aggiornamento: 7/8/2018 per Telegram v4.9</string>
+    <string name="lastUpdate_orange">Tema Cloud</string>
+    <string name="lastUpdate_oxygen">Tema Cloud</string>
     <string name="lastUpdate_red">Ultimo aggiornamento: 7/8/2018 per Telegram v4.9</string>
     <string name="lastUpdate_saints">Ultimo aggiornamento: 26/7/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_inverted">Ultimo aggiornamento: 9/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_inverted_inferno">Ultimo aggiornamento: 8/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_aospex">Ultimo aggiornamento: 30/7/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_steam">Ultimo aggiornamento: 8/8/2018 per Telegram v4.9</string>
+    <string name="lastUpdate_inverted">Tema Cloud. Disponibile anche su Desktop</string>
+    <string name="lastUpdate_inverted_inferno">Tema Cloud</string>
+    <string name="lastUpdate_aospex">Tema Cloud</string>
+    <string name="lastUpdate_steam">Tema Cloud</string>
     <string name="version_standard">Scarica la v5.3.0</string>
     <string name="version_au">Scarica la v4.9.0</string>
-    <string name="version_cyanogen">Scarica la v4.9.1</string>
+    <string name="version_cyanogen">Scarica</string>
     <string name="version_mint">Scarica la v4.9.0</string>
-    <string name="version_orange">Scarica la v4.9.0</string>
-    <string name="version_oxygen">Scarica la v4.9.1</string>
+    <string name="version_orange">Scarica</string>
+    <string name="version_oxygen">Scarica</string>
     <string name="version_red">Scarica la v4.9.1</string>
     <string name="version_saints">Scarica la v1.0b</string>
-    <string name="version_inverted">Scarica la v4.9.1</string>
-    <string name="version_inverted_inferno">Scarica la v4.9.0</string>
-    <string name="version_aospex">Scarica la v4.9.0</string>
-    <string name="version_steam">Scarica la v4.9.0</string>
+    <string name="version_inverted">Scarica</string>
+    <string name="version_inverted_inferno">Scarica</string>
+    <string name="version_aospex">Scarica</string>
+    <string name="version_steam">Scarica</string>
     <string name="news1Content">Jam rilasciato per\nTelegram X</string>
     <string name="news1Date">11/10/2018</string>
     <string name="similar_themes">Temi simili</string>
-    <string name="lastUpdate_monster">Ultimo aggiornamento: 17/8/2018 per Telegram v4.9</string>
-    <string name="version_monster">Scarica la v4.9.0</string>
-    <string name="version_league">Scarica la v4.9.0</string>
-    <string name="lastUpdate_league">Ultimo aggiornamento: 18/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_greenSunset">Ultimo aggiornamento: 24/8/2018 per Telegram v4.9</string>
-    <string name="version_greenSunset">Scarica la v4.9.0</string>
+    <string name="lastUpdate_monster">Tema Cloud. Disponibile anche su Desktop</string>
+    <string name="version_monster">Scarica</string>
+    <string name="version_league">Scarica</string>
+    <string name="lastUpdate_league">Tema Cloud</string>
+    <string name="lastUpdate_greenSunset">Tema Cloud</string>
+    <string name="version_greenSunset">Scarica</string>
     <string name="download">Scarica</string>
     <string name="view">Guarda</string>
-    <string name="lastUpdate_pixelBlue">Ultimo aggiornamento: 2/9/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_crimson">Ultimo aggiornamento: 25/8/2018 per Telegram v4.9</string>
-    <string name="version_pixelBlue">Scarica la v4.9.1</string>
-    <string name="version_crimson">Scarica la v4.9.0</string>
-    <string name="version_quetzal">Scarica la v4.9.0</string>
-    <string name="lastUpdate_quetzal">Ultimo aggiornamento: 2/9/2018 per Telegram v4.9</string>
+    <string name="lastUpdate_pixelBlue">Tema Cloud. Disponibile anche su Desktop</string>
+    <string name="lastUpdate_crimson">Tema Cloud</string>
+    <string name="version_pixelBlue">Scarica</string>
+    <string name="version_crimson">Scarica</string>
+    <string name="version_quetzal">Scarica</string>
+    <string name="lastUpdate_quetzal">Tema Cloud</string>
     <string name="version_redleaf">Scarica la v4.9.0</string>
-    <string name="lastUpdate_redleaf">Ultimo aggiornamento: 20/9/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_autumn">Ultimo aggiornamento: 2019/05/13 per Telegram v4.9</string>
-    <string name="version_autumn">Scarica la v4.9.0</string>
-    <string name="version_phlox">Scarica la v4.9.0</string>
-    <string name="lastUpdate_phlox">Ultimo aggiornamento: 01/10/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_teal">Ultimo aggiornamento: 29/10/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_disrespect">Ultimo aggiornamento: 22/11/2018 per Telegram v4.9</string>
+    <string name="lastUpdate_redleaf">Tema Cloud</string>
+    <string name="lastUpdate_autumn">Tema Cloud</string>
+    <string name="version_autumn">Scarica</string>
+    <string name="version_phlox">Scarica</string>
+    <string name="lastUpdate_phlox">Tema Cloud</string>
+    <string name="lastUpdate_teal">Tema Cloud. Disponibile anche su Desktop</string>
+    <string name="lastUpdate_disrespect">Tema Cloud</string>
     <string name="try_again">Prova ancora</string>
     <string name="action_settings">Impostazioni</string>
-    <string name="version_teal">Scarica la v4.9.1</string>
-    <string name="version_disrespect">Scarica la v4.9.0</string>
+    <string name="version_teal">Scarica</string>
+    <string name="version_disrespect">Scarica</string>
     <string name="pure_black_themes">Temi totalmente neri</string>
     <string name="pure_black_string_home">Sfondi totalmente neri \nAlcuni temi hanno uno sfondo modificato</string>
     <string name="inverted_themes">Temi invertiti</string>
