--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,58 +18,58 @@
     <string name="pickyourpoison">Pick your poison</string>
 
 
-    <string name="lastUpdate_standard">Last update: 2019/05/13 for Telegram v5.3</string>
+    <string name="lastUpdate_standard">Cloud Theme. Available on Desktop too.</string>
     <string name="lastUpdate_au">Last update: 2019/05/13 for Telegram v4.9</string>
-    <string name="lastUpdate_cyanogen">Last update: 2019/05/13 for Telegram v4.9</string>
+    <string name="lastUpdate_cyanogen">Cloud Theme</string>
     <string name="lastUpdate_mint">Last update: 8/3/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_orange">Last update: 8/9/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_oxygen">Last update: 8/7/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_orange">Cloud Theme</string>
+    <string name="lastUpdate_oxygen">Cloud Theme</string>
     <string name="lastUpdate_red">Last update: 8/7/2018 for Telegram v4.9</string>
     <string name="lastUpdate_saints">Last update: 7/26/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_inverted">Last update: 8/9/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_inverted_inferno">Last update: 8/8/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_aospex">Last update: 7/30/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_steam">Last update: 8/8/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_monster">Last update: 8/17/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_league">Last update: 8/17/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_greenSunset">Last update: 8/24/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_pixelBlue">Last update: 9/2/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_crimson">Last update: 8/25/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_quetzal">Last update: 9/2/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_redleaf">Last update: 9/20/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_autumn">Last update: 2019/05/13 for Telegram v4.9</string>
-    <string name="lastUpdate_phlox">Last update: 10/01/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_teal">Last update: 10/29/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_disrespect">Last update: 11/22/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_inverted">Cloud Theme. Available on Desktop too.</string>
+    <string name="lastUpdate_inverted_inferno">Cloud Theme</string>
+    <string name="lastUpdate_aospex">Cloud Theme</string>
+    <string name="lastUpdate_steam">Cloud Theme</string>
+    <string name="lastUpdate_monster">Cloud Theme. Available on Desktop too.</string>
+    <string name="lastUpdate_league">Cloud Theme</string>
+    <string name="lastUpdate_greenSunset">Cloud Theme</string>
+    <string name="lastUpdate_pixelBlue">Cloud Theme. Available on Desktop too.</string>
+    <string name="lastUpdate_crimson">Cloud Theme</string>
+    <string name="lastUpdate_quetzal">Cloud Theme</string>
+    <string name="lastUpdate_redleaf">Cloud Theme</string>
+    <string name="lastUpdate_autumn">Cloud Theme</string>
+    <string name="lastUpdate_phlox">Cloud Theme</string>
+    <string name="lastUpdate_teal">Cloud Theme. Available on Desktop too.</string>
+    <string name="lastUpdate_disrespect">Cloud Theme</string>
     <string name="lastUpdate_pixelBluex">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_tealx">Made for TGX BETA 0.21.3.1037</string>
     <string name="lastUpdate_invertedx">Made for TGX BETA 0.21.3.1037</string>
     <string name="lastUpdate_jamx">Made for TGX BETA 0.21.3.1037</string>
 
-    <string name="version_standard">Download v5.3.0</string>
+    <string name="version_standard">Download</string>
     <string name="version_au">Download v4.9.0</string>
-    <string name="version_cyanogen">Download v4.9.1</string>
+    <string name="version_cyanogen">Download</string>
     <string name="version_mint">Download v4.9.0</string>
-    <string name="version_orange">Download v4.9.0</string>
-    <string name="version_oxygen">Download v4.9.1</string>
+    <string name="version_orange">Download</string>
+    <string name="version_oxygen">Download</string>
     <string name="version_red">Download v4.9.1</string>
     <string name="version_saints">Download v1.0b</string>
-    <string name="version_inverted">Download v4.9.1</string>
-    <string name="version_inverted_inferno">Download v4.9.0</string>
-    <string name="version_aospex">Download v4.9.0</string>
-    <string name="version_steam">Download v4.9.0</string>
-    <string name="version_monster">Download v4.9.0</string>
-    <string name="version_league">Download v4.9.0</string>
-    <string name="version_greenSunset">Download v4.9.0</string>
-    <string name="version_pixelBlue">Download v4.9.1</string>
-    <string name="version_crimson">Download v4.9.0</string>
-    <string name="version_quetzal">Download v4.9.0</string>
-    <string name="version_redleaf">Download v4.9.0</string>
-    <string name="version_autumn">Download v4.9.0</string>
-    <string name="version_phlox">Download v4.9.0</string>
-    <string name="version_teal">Download v4.9.1</string>
-    <string name="version_disrespect">Download v4.9.0</string>
+    <string name="version_inverted">Download</string>
+    <string name="version_inverted_inferno">Download</string>
+    <string name="version_aospex">Download</string>
+    <string name="version_steam">Download</string>
+    <string name="version_monster">Download</string>
+    <string name="version_league">Download</string>
+    <string name="version_greenSunset">Download</string>
+    <string name="version_pixelBlue">Download</string>
+    <string name="version_crimson">Download</string>
+    <string name="version_quetzal">Download</string>
+    <string name="version_redleaf">Download</string>
+    <string name="version_autumn">Download</string>
+    <string name="version_phlox">Download</string>
+    <string name="version_teal">Download</string>
+    <string name="version_disrespect">Download</string>
     <string name="version_pixelBluex">Download</string>
     <string name="version_infernox">Download</string>
     <string name="version_tealx">Download</string>
