+ Added support for more cloud themes + Changed font around in a few themes for no reason whatsoever + Moved around some stuff for, guess it, no reason whatsoever + Migrated to androidX, something probably broke but I'm still not aware of it, so have fun trying it out

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,57 +3,22 @@
     <string name="app_name">ABTheme Showcase</string>
     <string name="lastUpdate_standard">Tema Cloud. Disponibile anche su Desktop</string>
     <string name="lastUpdate_au">Ultimo aggiornamento: 2019/05/13 per Telegram v4.9</string>
-    <string name="lastUpdate_cyanogen">Tema Cloud</string>
     <string name="lastUpdate_mint">Ultimo aggiornamento: 3/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_orange">Tema Cloud</string>
-    <string name="lastUpdate_oxygen">Tema Cloud</string>
     <string name="lastUpdate_red">Ultimo aggiornamento: 7/8/2018 per Telegram v4.9</string>
-    <string name="lastUpdate_saints">Ultimo aggiornamento: 26/7/2018 per Telegram v4.9</string>
     <string name="lastUpdate_inverted">Tema Cloud. Disponibile anche su Desktop</string>
-    <string name="lastUpdate_inverted_inferno">Tema Cloud</string>
-    <string name="lastUpdate_aospex">Tema Cloud</string>
-    <string name="lastUpdate_steam">Tema Cloud</string>
-    <string name="version_standard">Scarica la v5.3.0</string>
     <string name="version_au">Scarica la v4.9.0</string>
-    <string name="version_cyanogen">Scarica</string>
     <string name="version_mint">Scarica la v4.9.0</string>
-    <string name="version_orange">Scarica</string>
-    <string name="version_oxygen">Scarica</string>
     <string name="version_red">Scarica la v4.9.1</string>
-    <string name="version_saints">Scarica la v1.0b</string>
-    <string name="version_inverted">Scarica</string>
-    <string name="version_inverted_inferno">Scarica</string>
-    <string name="version_aospex">Scarica</string>
-    <string name="version_steam">Scarica</string>
     <string name="news1Content">Jam rilasciato per\nTelegram X</string>
     <string name="news1Date">11/10/2018</string>
     <string name="similar_themes">Temi simili</string>
     <string name="lastUpdate_monster">Tema Cloud. Disponibile anche su Desktop</string>
-    <string name="version_monster">Scarica</string>
-    <string name="version_league">Scarica</string>
-    <string name="lastUpdate_league">Tema Cloud</string>
-    <string name="lastUpdate_greenSunset">Tema Cloud</string>
-    <string name="version_greenSunset">Scarica</string>
     <string name="download">Scarica</string>
     <string name="view">Guarda</string>
     <string name="lastUpdate_pixelBlue">Tema Cloud. Disponibile anche su Desktop</string>
-    <string name="lastUpdate_crimson">Tema Cloud</string>
-    <string name="version_pixelBlue">Scarica</string>
-    <string name="version_crimson">Scarica</string>
-    <string name="version_quetzal">Scarica</string>
-    <string name="lastUpdate_quetzal">Tema Cloud</string>
-    <string name="version_redleaf">Scarica la v4.9.0</string>
-    <string name="lastUpdate_redleaf">Tema Cloud</string>
-    <string name="lastUpdate_autumn">Tema Cloud</string>
-    <string name="version_autumn">Scarica</string>
-    <string name="version_phlox">Scarica</string>
-    <string name="lastUpdate_phlox">Tema Cloud</string>
     <string name="lastUpdate_teal">Tema Cloud. Disponibile anche su Desktop</string>
-    <string name="lastUpdate_disrespect">Tema Cloud</string>
     <string name="try_again">Prova ancora</string>
     <string name="action_settings">Impostazioni</string>
-    <string name="version_teal">Scarica</string>
-    <string name="version_disrespect">Scarica</string>
     <string name="pure_black_themes">Temi totalmente neri</string>
     <string name="pure_black_string_home">Sfondi totalmente neri \nAlcuni temi hanno uno sfondo modificato</string>
     <string name="inverted_themes">Temi invertiti</string>
@@ -76,21 +41,17 @@
     <string name="bring_me_back">INDIETRO</string>
     <string name="tgx_themes">Temi per Telegram X</string>
     <string name="tgx_string_home">Temi fatti per Telegram X</string>
-    <string name="version_infernox">Scarica</string>
-    <string name="version_pixelBluex">Scarica</string>
     <string name="lastUpdate_pixelBluex">Fatto per TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Fatto per TGX BETA 0.21.2.1018</string>
     <string name="tgx_string_page">Potrebbe essere necessaria la versione Beta di Telegram X</string>
-    <string name="version_tealx">Scarica</string>
     <string name="lastUpdate_tealx">Fatto per TGX BETA 0.21.3.1037</string>
     <string name="minussymbol"><![CDATA[<]]></string>
-    <string name="version_invertedx">Scarica</string>
     <string name="lastUpdate_invertedx">Fatto per TGX BETA 0.21.3.1037</string>
-    <string name="version_jamx">Scarica</string>
     <string name="lastUpdate_jamx">Fatto per TGX BETA 0.21.3.1037</string>
     <string name="pure_black_nav">"Temi\nTotalmente\nNeri"</string>
     <string name="other_themes_nav">"Altri\nTemi"</string>
     <string name="pickyourpoison">Scegli il tuo veleno</string>
-
+    <string name="cloudTheme">Cloud Theme</string>
+    <string name="cloudTheme_Desktop">Tema Cloud. Disponibile anche su Desktop</string>
 
 </resources>
