--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,64 +17,25 @@
     <string name="view">View</string>
     <string name="pickyourpoison">Pick your poison</string>
 
-
+    <string name="cloudTheme">Cloud Theme</string>
+    <string name="cloudTheme_Desktop">Cloud Theme. Available on Desktop too.</string>
     <string name="lastUpdate_standard">Cloud Theme. Available on Desktop too.</string>
     <string name="lastUpdate_au">Last update: 2019/05/13 for Telegram v4.9</string>
-    <string name="lastUpdate_cyanogen">Cloud Theme</string>
     <string name="lastUpdate_mint">Last update: 8/3/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_orange">Cloud Theme</string>
-    <string name="lastUpdate_oxygen">Cloud Theme</string>
     <string name="lastUpdate_red">Last update: 8/7/2018 for Telegram v4.9</string>
-    <string name="lastUpdate_saints">Last update: 7/26/2018 for Telegram v4.9</string>
     <string name="lastUpdate_inverted">Cloud Theme. Available on Desktop too.</string>
-    <string name="lastUpdate_inverted_inferno">Cloud Theme</string>
-    <string name="lastUpdate_aospex">Cloud Theme</string>
-    <string name="lastUpdate_steam">Cloud Theme</string>
     <string name="lastUpdate_monster">Cloud Theme. Available on Desktop too.</string>
-    <string name="lastUpdate_league">Cloud Theme</string>
-    <string name="lastUpdate_greenSunset">Cloud Theme</string>
     <string name="lastUpdate_pixelBlue">Cloud Theme. Available on Desktop too.</string>
-    <string name="lastUpdate_crimson">Cloud Theme</string>
-    <string name="lastUpdate_quetzal">Cloud Theme</string>
-    <string name="lastUpdate_redleaf">Cloud Theme</string>
-    <string name="lastUpdate_autumn">Cloud Theme</string>
-    <string name="lastUpdate_phlox">Cloud Theme</string>
     <string name="lastUpdate_teal">Cloud Theme. Available on Desktop too.</string>
-    <string name="lastUpdate_disrespect">Cloud Theme</string>
     <string name="lastUpdate_pixelBluex">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_tealx">Made for TGX BETA 0.21.3.1037</string>
     <string name="lastUpdate_invertedx">Made for TGX BETA 0.21.3.1037</string>
     <string name="lastUpdate_jamx">Made for TGX BETA 0.21.3.1037</string>
 
-    <string name="version_standard">Download</string>
     <string name="version_au">Download v4.9.0</string>
-    <string name="version_cyanogen">Download</string>
     <string name="version_mint">Download v4.9.0</string>
-    <string name="version_orange">Download</string>
-    <string name="version_oxygen">Download</string>
     <string name="version_red">Download v4.9.1</string>
-    <string name="version_saints">Download v1.0b</string>
-    <string name="version_inverted">Download</string>
-    <string name="version_inverted_inferno">Download</string>
-    <string name="version_aospex">Download</string>
-    <string name="version_steam">Download</string>
-    <string name="version_monster">Download</string>
-    <string name="version_league">Download</string>
-    <string name="version_greenSunset">Download</string>
-    <string name="version_pixelBlue">Download</string>
-    <string name="version_crimson">Download</string>
-    <string name="version_quetzal">Download</string>
-    <string name="version_redleaf">Download</string>
-    <string name="version_autumn">Download</string>
-    <string name="version_phlox">Download</string>
-    <string name="version_teal">Download</string>
-    <string name="version_disrespect">Download</string>
-    <string name="version_pixelBluex">Download</string>
-    <string name="version_infernox">Download</string>
-    <string name="version_tealx">Download</string>
-    <string name="version_invertedx">Download</string>
-    <string name="version_jamx">Download</string>
 
     <string name="news1Date">2/2/2019</string>
     <string name="news1Content">Jam X\nReleased</string>
